# Alpha-App

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ALPHA.md  CHANGELOG.md  CHAT-V2.md  CIRCADIAN-SPEC.md  CIRCADIAN.md  CLAUDE.md  Dockerfile  KERNEL-V2.md  KERNEL.md  PROTOCOL.md  REQUIREMENTS.md  SMART-CHAT.md  compose.yml  deploy.sh  justfile  pixelfuck.sh  start-dev.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  test.yml
.zed/: settings.json
backend/: .env.example  alembic.ini  properdocs.yml  pyproject.toml
backend-ref/scripts/: capsule_prototype.py  probe_compact.py  probe_handoff_queue.py  seed_pixelfuck_sidebar.py  test_solitude_prompts.py
backend-ref/src/alpha_app/: __init__.py  chat.py  constants.py  db.py  inference_client.py  reflection.py  strings.py  system_prompt.py  topics.py
backend-ref/tests/: test_circadian_chat.py  test_images.py  test_orientation.py  test_smart_chat.py  test_system_prompt.py
backend-ref/tests/fixtures/: golden_reference.py
backend-tests/: conftest.py  mock_anthropic.py  pyproject.toml  test_connect.py
backend/alembic/: README  env.py
backend/alembic/versions/: fe9d0faa70fd_create_app_schema_and_chats_table.py
backend/docs/: gen_ref_pages.py  index.md
backend/mock_anthropic/: __init__.py  __main__.py
backend/scripts/: probe_associative_read.py  probe_streaming.py  seed_pixelfuck.py  seed_solitude_program.py
backend/scripts/dev/: reset_dev_db.py
backend/src/alpha/: __init__.py  __main__.py  app.py  app_state.py  chat.py  chats.py  claude_client.py  cli.py  db.py  settings.py
backend/src/alpha/api/: __init__.py  health.py  router.py
backend/src/alpha/ws/: __init__.py  commands.py  connections.py  dispatcher.py  events.py  responses.py  router.py
backend/src/alpha/ws/handlers/: __init__.py  create_chat.py  hello.py  interrupt.py  join_chat.py  send.py
backend/src/alpha_app/: __init__.py  chat.py  claude.py  client.py  clock.py  constants.py  db.py  demo.py  env.py  frotz.py  images.py  main.py  mock_claude.py  models.py  orientation.py  protocol.py  proxy.py  scheduler.py  sources.py  suggest.py  system_prompt.py  topics.py
backend/src/alpha_app/jobs/: __init__.py  alarm.py  capsule.py  dawn.py  dusk.py  solitude.py  to_self.py  today.py
backend/src/alpha_app/memories/: cortex.py  db.py  dream.py  embeddings.py  fetch.py  garage.py  images.py  reading.py  recall.py  vision.py
backend/src/alpha_app/routes/: broadcast.py  enrobe.py  handlers.py  schedule_api.py  sessions.py  spans.py  streaming.py  turn.py  turn_smart.py  ws.py
backend/src/alpha_app/tools/: __init__.py  alpha.py  cortex.py  handoff.py
backend/tests/: conftest.py  test_app_state.py  test_claude.py  test_compact_detection.py  test_create_chat.py  test_dusk.py  test_enrobe.py  test_flush.py  test_mcp_dispatch.py  test_message_shape.py  test_orientation.py  test_proxy.py  test_proxy_forwarding.py  test_reflection.py  test_scheduler.py  test_smart_chat.py  test_solitude.py  test_suggest.py  test_system_prompt.py  test_wire_fixtures.py
backend/tests/__snapshots__/: test_create_chat.ambr
backend/tests/e2e/: conftest.py  mock_anthropic.py  test_approach_lights.py  test_golden_path.py  test_happy_path.py  test_reap.py  test_send.py  test_streaming.py
backend/tests/e2e/screenshots/: page_after_send.html
backend/tests/fixtures/: golden_reference.py
backend/tests/fixtures/jnsq/: expected_full.txt  expected_no_bill.txt
backend/tests/integration/: test_app_state.py  test_create_chat.py  test_handshake.py
backend/tests/integration/__snapshots__/: test_create_chat.ambr
backend/tests/unit/: test_claude_client.py  test_connections.py  test_wire_fixtures.py
backup/: Dockerfile  backup.py
docs/: .gitignore  index.md  package-lock.json  package.json  wire-protocol.md
docs/.vitepress/: config.mts
docs/docs/: architecture.md  chat.md  circadian.md  claude.md  cortex.md  index.md  solitude.md  what-is-alpha.md
docs/docs/.vitepress/: config.ts
fixtures/wire-payloads/: README.md  app-state.json  assistant-message.json  chat-created.json  chat-joined.json  chat-state.json  create-chat.json  error.json  hello.json  hi-yourself.json  interrupt.json  interrupted.json  join-chat.json  received.json  send.json  text-delta.json  thinking-delta.json  tool-call-delta.json  tool-call-result.json  tool-call-start.json  turn-complete.json  turn-started.json  user-message.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend-tests/: conftest.py  pyproject.toml  test_assistant_message.py  test_memory_note.py  test_thinking_block.py  test_tool_call.py  test_user_message.py
frontend-v2/: CLAUDE.md  package-lock.json  package.json  vite.config.ts
frontend-v2/src/: App.tsx  RuntimeProvider.tsx  index.css  main.tsx  store.ts
frontend-v2/src/components/: ChatHoverCard.tsx  ChatInfo.tsx  ContextMeter.tsx  grouped-thread-list.tsx
frontend-v2/src/hooks/: useAlphaWebSocket.ts
frontend-v2/src/lib/: DrainRateContext.tsx  deltaBuffer.ts  protocol.ts  streamingText.ts  turnBuffer.ts  useWebSocket.ts
frontend-v2/src/pages/: DevToolFallback.tsx
frontend-v2/src/themes/: alpha.css  ex-amber-minimal.css
frontend/e2e/: README.md  create-chat.spec.ts  fixtures.ts  reset-db.ts  send.spec.ts
frontend/public/: type-on-test.html
frontend/src/: App.tsx  RuntimeProvider.tsx  chat2.css  index.css  store.ts
frontend/tests/: wire-fixtures.test.ts
garage/: garage.toml
notebooks/: drain_sim.py
postgres/: archive-wal.sh  entrypoint.sh
scripts/: clear-chats.py  import-session.py  import_session.sh  replay-bench.py
tailscale/: serve-config.json
test_jnsq/.claude-plugin/: plugin.json
test_jnsq/prompts/: soul.md
(+92 files in other folders)
