[project]
name = "alpha"
version = "0.0.0"
description = "Alpha — an artificial intelligence."
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "logfire[fastapi]>=2.0",
    "pendulum>=3.0",
    "nanoid>=2.0",
]

[project.scripts]
alpha = "alpha.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha"]

[dependency-groups]
dev = []
docs = [
    "properdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]
